--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
   <main>
+    <div class="spinning-text left">KAVTET</div>
     <div class="logo-container">
-      <img src="kavtet-logo.png" alt="KAVTET Logo" class="logo">
+      <div class="logo">KAVTET</div> <!-- Replace the image with styled text -->
     </div>
     <h1>COMING SOON</h1>
+    <p class="coming-soon-description">Stay tuned for something special.</p>
+    <div class="spinning-text right">KAVTET</div>
   </main>
 </body>
 </html>
