--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <input type="email" id="email" placeholder="Your email" required>
           <button type="submit">Subscribe</button>
         </form>
-        <span class="close" id="close-modal">&times;</span>
+        <span class="close" id="close-modal">×</span>
       </div>
     </div>
   </main>
